--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,15 @@
 services:
   scheduler-bot:
-    build: .
-    image: scheduler-bot:latest
+    image: ghcr.io/spycro/dnd-scheduler-bot:sha-4daee50
+    container_name: scheduler-bot
+    init: true
     restart: unless-stopped
     env_file:
       - .env
+    environment:
+      DATABASE_PATH: /data/scheduler.db
     volumes:
-      - dbdata:/data:rw
+      - scheduler_bot_data:/data:rw
     deploy:
       resources:
         limits:
@@ -15,7 +18,20 @@ services:
         reservations:
           cpus: "0.25"
           memory: 256M
+    healthcheck:
+      test:
+        - CMD-SHELL
+        - python -c "import socket; socket.gethostbyname('discord.com')"
+      interval: 30s
+      timeout: 5s
+      start_period: 20s
+      retries: 3
+    logging:
+      driver: json-file
+      options:
+        max-size: "10m"
+        max-file: "5"
 
 volumes:
-  dbdata:
+  scheduler_bot_data:
     driver: local
